--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@ Mako==0.9.1
 MarkupSafe==0.18
 #apparmor==2.10.95
 #apparmor.click==0.2ubuntu1
-apturl==0.5.2ubuntu4
+#apturl==0.5.2ubuntu4
 chardet==2.2.1
 checkbox-ng==0.3
 checkbox-support==0.2
