--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,7 +13,7 @@ checkbox-support==0.2
 #click==0.4.21.1ubuntu0.2
 colorama==0.2.5
 #command-not-found==0.3
-defer==1.0.6
+#defer==1.0.6
 dell-recovery==0.0.0
 dj-database-url==0.4.2
 dj-static==0.0.6
