--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -26,7 +26,7 @@ django-localflavor==1.5.2
 django-phonenumber-field==1.3.0
 django-suit==0.2.25
 feedparser==5.1.3
-friends==0.1
+#friends==0.1
 html5lib==0.999
 httplib2==0.8
 language-selector==0.1
