--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,7 +29,7 @@ feedparser==5.1.3
 #friends==0.1
 html5lib==0.999
 httplib2==0.8
-language-selector==0.1
+#language-selector==0.1
 louis==2.5.3
 lxml==3.3.3
 mysql-connector-python==1.1.6
