--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -32,7 +32,7 @@ httplib2==0.8
 #language-selector==0.1
 #louis==2.5.3
 lxml==3.3.3
-mysql-connector-python==1.1.6
+#mysql-connector-python==1.1.6
 oauthlib==0.6.1
 onboard==1.0.1
 oneconf==0.3.7.14.04.1
