--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -34,7 +34,7 @@ httplib2==0.8
 lxml==3.3.3
 #mysql-connector-python==1.1.6
 oauthlib==0.6.1
-onboard==1.0.1
+#onboard==1.0.1
 oneconf==0.3.7.14.04.1
 phonenumberslite==8.8.0
 piston-mini-client==0.7.5
