--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -42,7 +42,7 @@ plainbox==0.5.3
 #progressbar==2.3
 pycrypto==2.6.1
 pycurl==7.19.3
-pygobject==3.12.0
+#pygobject==3.12.0
 pygraphviz==1.3.1
 pyparsing==2.0.1
 python-apt==0.9.3.5ubuntu2
