--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -46,7 +46,7 @@ pycurl==7.19.3
 pygraphviz==1.3.1
 pyparsing==2.0.1
 #python-apt==0.9.3.5ubuntu2
-python-debian==0.1.21-nmu2ubuntu2
+#python-debian==0.1.21-nmu2ubuntu2
 python-decouple==3.1
 python-gnupg==0.3.6
 pytz==2017.2
