--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -52,7 +52,7 @@ python-gnupg==0.3.6
 pytz==2017.2
 pyxdg==0.25
 requests==2.2.1
-screen-resolution-extra==0.0.0
+#screen-resolution-extra==0.0.0
 six==1.5.2
 software-center-aptd-plugins==0.0.0
 static3==0.7.0
