--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -54,7 +54,7 @@ pyxdg==0.25
 requests==2.2.1
 #screen-resolution-extra==0.0.0
 six==1.5.2
-software-center-aptd-plugins==0.0.0
+#software-center-aptd-plugins==0.0.0
 static3==0.7.0
 system-image==2.2
 ubuntu-drivers-common==0.0.0
