--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -58,7 +58,7 @@ six==1.5.2
 static3==0.7.0
 #system-image==2.2
 #ubuntu-drivers-common==0.0.0
-ufw==0.34-rc-0ubuntu2
+#ufw==0.34-rc-0ubuntu2
 unattended-upgrades==0.1
 unity-scope-audacious==0.1
 unity-scope-calculator==0.1
