--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -59,7 +59,7 @@ static3==0.7.0
 #system-image==2.2
 #ubuntu-drivers-common==0.0.0
 #ufw==0.34-rc-0ubuntu2
-unattended-upgrades==0.1
+#unattended-upgrades==0.1
 unity-scope-audacious==0.1
 unity-scope-calculator==0.1
 unity-scope-chromiumbookmarks==0.1
