--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -60,7 +60,7 @@ static3==0.7.0
 #ubuntu-drivers-common==0.0.0
 #ufw==0.34-rc-0ubuntu2
 #unattended-upgrades==0.1
-unity-scope-audacious==0.1
+#unity-scope-audacious==0.1
 unity-scope-calculator==0.1
 unity-scope-chromiumbookmarks==0.1
 unity-scope-clementine==0.1
