--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -61,23 +61,23 @@ static3==0.7.0
 #ufw==0.34-rc-0ubuntu2
 #unattended-upgrades==0.1
 #unity-scope-audacious==0.1
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-clementine==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-gdrive==0.7
-unity-scope-gmusicbrowser==0.1
-unity-scope-gourmet==0.1
-unity-scope-guayadeque==0.1
-unity-scope-manpages==0.1
-unity-scope-musique==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
+#unity-scope-calculator==0.1
+#unity-scope-chromiumbookmarks==0.1
+#unity-scope-clementine==0.1
+#unity-scope-colourlovers==0.1
+#unity-scope-devhelp==0.1
+#unity-scope-gdrive==0.7
+#unity-scope-gmusicbrowser==0.1
+#unity-scope-gourmet==0.1
+#unity-scope-guayadeque==0.1
+#unity-scope-manpages==0.1
+#unity-scope-musique==0.1
+#unity-scope-openclipart==0.1
+#unity-scope-texdoc==0.1
+#unity-scope-tomboy==0.1
+#unity-scope-virtualbox==0.1
+#unity-scope-yelp==0.1
+#unity-scope-zotero==0.1
 urllib3==1.7.1
 usb-creator==0.2.23
 virtualenv==15.1.0
