--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -82,5 +82,5 @@ urllib3==1.7.1
 #usb-creator==0.2.23
 virtualenv==15.1.0
 wheel==0.24.0
-xdiagnose==3.6.3build2
+#xdiagnose==3.6.3build2
 xkit==0.0.0
