--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,21 +1,21 @@
 Babel==2.5.0
-Brlapi==0.6.1
+#Brlapi==0.6.1
 Django==1.11.4
-LibAppArmor==2.10.95
+#LibAppArmor==2.10.95
 Mako==0.9.1
 MarkupSafe==0.18
 Pillow==4.3.0
-apparmor==2.10.95
-apparmor.click==0.2ubuntu1
-apturl==0.5.2ubuntu4
+#apparmor==2.10.95
+#apparmor.click==0.2ubuntu1
+#apturl==0.5.2ubuntu4
 chardet==2.2.1
 checkbox-ng==0.3
 checkbox-support==0.2
-click==0.4.21.1ubuntu0.2
+#click==0.4.21.1ubuntu0.2
 colorama==0.2.5
-command-not-found==0.3
-defer==1.0.6
-dell-recovery==0.0.0
+#command-not-found==0.3
+#defer==1.0.6
+#dell-recovery==0.0.0
 dj-database-url==0.4.2
 dj-static==0.0.6
 django-ajax-selects==1.6.0
@@ -31,66 +31,66 @@ django-suit==0.2.25
 djangorestframework==3.7.3
 et-xmlfile==1.0.1
 feedparser==5.1.3
-friends==0.1
+#friends==0.1
 html5lib==0.999
 httplib2==0.8
 jdcal==1.3
-language-selector==0.1
-louis==2.5.3
+#language-selector==0.1
+#louis==2.5.3
 lxml==3.3.3
-mysql-connector-python==1.1.6
+#mysql-connector-python==1.1.6
 oauthlib==0.6.1
 olefile==0.44
-onboard==1.0.1
-oneconf==0.3.7.14.04.1
+#onboard==1.0.1
+#oneconf==0.3.7.14.04.1
 openpyxl==2.4.9
 phonenumberslite==8.8.0
 piston-mini-client==0.7.5
 plainbox==0.5.3
-progressbar==2.3
+#progressbar==2.3
 pycrypto==2.6.1
 pycurl==7.19.3
-pygobject==3.12.0
+#pygobject==3.12.0
 pygraphviz==1.3.1
 pyparsing==2.0.1
-python-apt==0.9.3.5ubuntu2
+#python-apt==0.9.3.5ubuntu2
 python-dateutil==2.6.1
-python-debian==0.1.21-nmu2ubuntu2
+#python-debian==0.1.21-nmu2ubuntu2
 python-decouple==3.1
 python-gnupg==0.3.6
 pytz==2017.2
 pyxdg==0.25
 reportlab==3.4.0
 requests==2.2.1
-screen-resolution-extra==0.0.0
+#screen-resolution-extra==0.0.0
 six==1.5.2
-software-center-aptd-plugins==0.0.0
+#software-center-aptd-plugins==0.0.0
 static3==0.7.0
-system-image==2.2
-ubuntu-drivers-common==0.0.0
-ufw==0.34-rc-0ubuntu2
-unattended-upgrades==0.1
-unity-scope-audacious==0.1
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-clementine==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-gdrive==0.7
-unity-scope-gmusicbrowser==0.1
-unity-scope-gourmet==0.1
-unity-scope-guayadeque==0.1
-unity-scope-manpages==0.1
-unity-scope-musique==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
+#system-image==2.2
+#ubuntu-drivers-common==0.0.0
+#ufw==0.34-rc-0ubuntu2
+#unattended-upgrades==0.1
+#unity-scope-audacious==0.1
+#unity-scope-calculator==0.1
+#unity-scope-chromiumbookmarks==0.1
+#unity-scope-clementine==0.1
+#unity-scope-colourlovers==0.1
+#unity-scope-devhelp==0.1
+#unity-scope-gdrive==0.7
+#unity-scope-gmusicbrowser==0.1
+#unity-scope-gourmet==0.1
+#unity-scope-guayadeque==0.1
+#unity-scope-manpages==0.1
+#unity-scope-musique==0.1
+#unity-scope-openclipart==0.1
+#unity-scope-texdoc==0.1
+#unity-scope-tomboy==0.1
+#unity-scope-virtualbox==0.1
+#unity-scope-yelp==0.1
+#unity-scope-zotero==0.1
 urllib3==1.7.1
-usb-creator==0.2.23
+#usb-creator==0.2.23
 virtualenv==15.1.0
 wheel==0.24.0
-xdiagnose==3.6.3build2
-xkit==0.0.0
+#xdiagnose==3.6.3build2
+#xkit==0.0.0
